quick fix to elements not showing

--- a/elysian_wishlist/static/styles/pages.css
+++ b/elysian_wishlist/static/styles/pages.css
@@ -216,8 +216,7 @@ h1,h4 {
   font-size: 21px;
   border: none;
   position: relative;
-  padding-top: 4.5px;
-  right: 2.5%;
+  right: 11.5%;
   background-color: white;
 }
 
